add translation and save student exam to localstorage

--- a/src/main/webapp/i18n/de/exam.json
+++ b/src/main/webapp/i18n/de/exam.json
@@ -29,7 +29,8 @@
             "finishExam": "Klausur abgeben",
             "progress": "Aufgabe {{ current }} von {{ all }}",
             "progressSmall": "{{ current }}/{{ all }}",
-            "submit": "Speichern und Weiter"
+            "submit": "Speichern & Weiter",
+            "noExam": "Keine Daten gefunden"
         },
         "exerciseGroup": {
             "created": "Neue Aufgabengruppe erstellt",
