--- a/src/main/webapp/i18n/en/textExercise.json
+++ b/src/main/webapp/i18n/en/textExercise.json
@@ -22,10 +22,10 @@
             "exampleSubmissions": "Example submissions",
             "assessedSubmission": "Your assessed submission",
             "createExampleSubmissions": "Create example submission",
-            "automaticAssessmentEnabled": "Automatic Assessment enabled",
+            "automaticAssessmentEnabled": "Automatic assessment suggestions enabled",
             "exampleSubmissionsRequireExercise": "To create an example submission, you first need to finish creating the text exercise.",
             "saveSuccessful": "Your answer was saved successfully!",
-            "error": "An error occured. Please try again later."
+            "error": "An error occurred. Please try again later."
         }
     }
 }
