--- a/src/main/webapp/i18n/en/exam.json
+++ b/src/main/webapp/i18n/en/exam.json
@@ -113,7 +113,8 @@
                     "typeNameToConfirm": "Please type in the name of the exercise group to confirm."
                 },
                 "addTextExercise": "Add text exercise",
-                "addFileUploadExercise": "Add file upload exercise"
+                "addFileUploadExercise": "Add file upload exercise",
+                "orderCouldNotBeSaved": "The order could not be saved"
             },
             "delete": {
                 "question": "Are you sure you want to permanently delete the Exam <strong>{{ title }}</strong>? All associated elements will be deleted. This action can NOT be undone!",
