adressed PR reviews

--- a/src/main/webapp/i18n/de/exam.json
+++ b/src/main/webapp/i18n/de/exam.json
@@ -19,9 +19,9 @@
             "updated": "Klausur bearbeitet"
         },
         "examParticipation": {
-            "connected": "Verbunden. Ihre Antworten werden alle 60s gespeichert.",
-            "disconnected": "Nicht verbunden. Gehen Sie online, um Ihre Änderungen auf dem Server zu speichern, aber Sie können weiterarbeiten!",
-            "waitForStart": "Bitte warten Sie.<br><br>Diese Seite wird sich automatisch aktualisieren, wenn die Prüfung beginnt.",
+            "connected": "Verbunden. Deine Antworten werden alle 60s gespeichert.",
+            "disconnected": "Deine Verbindung ist unterbrochen. Bitte überprüfe deine Internetverbindung. Du kannst weiterarbeiten, aber du musst verbunden sein, um Änderungen zu speichern!",
+            "waitForStart": "Bitte warte, bis die Klausur \"{{ title }}\" beginnt.",
             "timeUntilPlannedStart": "Verbleibende Zeit bis zum geplanten Start:"
         },
         "exerciseGroup": {
