--- a/src/main/webapp/i18n/en/exam.json
+++ b/src/main/webapp/i18n/en/exam.json
@@ -19,8 +19,8 @@
         },
         "examParticipation": {
             "connected": "Connected. Your answers will be saved every 60s.",
-            "disconnected": "Not connected. Go online to save your changes to the server, but you can continue working!",
-            "waitForStart": "Please wait.<br><br>This page will refresh automatically, when the exam starts.",
+            "disconnected": "You are disconnected. Please check your Internet connection. You can continue working, but you need to be connected in order to save changes!",
+            "waitForStart": "Please wait until the exam \"{{ title }}\" begins.",
             "timeUntilPlannedStart": "Time until planned start:"
         },
         "exerciseGroup": {
