Quiz exercise exam management (#1686)

--- a/src/main/webapp/i18n/de/exam.json
+++ b/src/main/webapp/i18n/de/exam.json
@@ -115,6 +115,8 @@
                 },
                 "addTextExercise": "Textaufgabe hinzufügen",
                 "addFileUploadExercise": "Datei Upload Aufgabe hinzufügen",
+                "addQuizExercise": "Quiz hinzufügen",
+                "addFileUploadExercise": "Datei Upload Aufgabe hinzufügen",
                 "addProgrammingExercise": "Programmieraufgabe hinzufügen"
             },
             "delete": {
