view for exam exercises

--- a/src/main/webapp/i18n/de/exercise.json
+++ b/src/main/webapp/i18n/de/exercise.json
@@ -141,7 +141,8 @@
                 "maxScore": {
                     "pattern": "Die maximale Punktzahl muss zwischen 1 und 9999 liegen!"
                 }
-            }
+            },
+            "exam": "Klausur"
         },
         "exerciseLtiConfiguration": {
             "lti": "LTI",
