--- a/src/main/webapp/i18n/en/exercise.json
+++ b/src/main/webapp/i18n/en/exercise.json
@@ -141,7 +141,8 @@
                 "maxScore": {
                     "pattern": "The maximum score must be between 1 and 9999!"
                 }
-            }
+            },
+            "exam": "Exam"
         },
         "exerciseLtiConfiguration": {
             "lti": "LTI",
