examTitle instead of courseTitle in student exam pages

--- a/src/main/webapp/i18n/de/exam.json
+++ b/src/main/webapp/i18n/de/exam.json
@@ -134,7 +134,7 @@
             }
         },
         "studentExamDetail": {
-            "studentExam": "Klausur ({{ courseTitle }})",
+            "studentExam": "Klausur ({{ examTitle }})",
             "exercises": "Aufgaben",
             "downloadPDF": " PDF herunterladen",
             "student": "Student",
