fix exam cover comment out exam session student exam can be fetched when visible

--- a/src/main/webapp/i18n/de/exam.json
+++ b/src/main/webapp/i18n/de/exam.json
@@ -34,7 +34,7 @@
             "progress": "Aufgabe {{ current }} von {{ all }}",
             "progressSmall": "{{ current }}/{{ all }}",
             "submit": "Speichern & Weiter",
-            "noExam": "Keine Daten gefunden"
+            "noExam": "Gehe online, um die Klausur zu laden"
         },
         "exerciseGroup": {
             "created": "Neue Aufgabengruppe erstellt",
