--- a/src/main/webapp/i18n/en/exam.json
+++ b/src/main/webapp/i18n/en/exam.json
@@ -26,6 +26,7 @@
             }
         },
         "examParticipation": {
+            "timer": "Time Left: ",
             "connected": "Connected. Your answers will be saved every 60s.",
             "disconnected": "You are disconnected. Please check your Internet connection. You can continue working, but you need to be connected in order to save changes!",
             "waitForStart": "Please wait until the exam \"{{ title }}\" begins.",
