Display working time in student exam detail view

--- a/src/main/webapp/i18n/de/exam.json
+++ b/src/main/webapp/i18n/de/exam.json
@@ -145,6 +145,7 @@
             "login": "Login: ",
             "email": "Email: ",
             "matriculationNumber": "Matrikelnummer: ",
+            "workingTime": "Bearbeitungszeit",
             "id": "ID",
             "type": "Typ",
             "title": "Titel",
