--- a/src/main/webapp/i18n/en/exam.json
+++ b/src/main/webapp/i18n/en/exam.json
@@ -36,7 +36,8 @@
             "progressSmall": "{{ current }}/{{ all }}",
             "noExam": "Exam could not be loaded. Please contact your instructor.",
             "submitProgrammingExercise": "Continue",
-            "submitOtherExercise": "Submit & continue"
+            "submitOtherExercise": "Submit & continue",
+            "greeting": "Hello {{ username }}, welcome to the exam\"{{ title }}\""
         },
         "exerciseGroup": {
             "created": "New exercise group created",
