--- a/src/main/webapp/i18n/de/exam.json
+++ b/src/main/webapp/i18n/de/exam.json
@@ -37,7 +37,7 @@
             "noExam": "Die Klausur konnte nicht geladen werden. Bitte wende dich an deinen Dozenten.",
             "submitProgrammingExercise": "Weiter",
             "submitOtherExercise": "Speichern & Weitere",
-            "greeting": "Hallo {{ username }}, willkommen zur Klausur \"{{ title}}\""
+            "greeting": "Hallo {{ username }}, willkommen zu \"{{ title }}\""
         },
         "exerciseGroup": {
             "created": "Neue Aufgabengruppe erstellt",
