--- a/src/main/webapp/i18n/en/exam.json
+++ b/src/main/webapp/i18n/en/exam.json
@@ -43,6 +43,7 @@
             "noExam": "Exam could not be loaded. Please contact your instructor.",
             "submitProgrammingExercise": "Continue",
             "submitOtherExercise": "Submit & continue",
+            "submitLastExercise": "Save",
             "greeting": "Hello {{ fullName }}, welcome to \"{{ title }}\""
         },
         "exerciseGroup": {
@@ -137,7 +138,6 @@
                     "typeNameToConfirm": "Please type in the name of the exercise group to confirm."
                 },
                 "addTextExercise": "Add text exercise",
-                "addFileUploadExercise": "Add file upload exercise",
                 "addQuizExercise": "Add quiz",
                 "addFileUploadExercise": "Add file upload exercise",
                 "addProgrammingExercise": "Add programming exercise",
