--- a/src/main/webapp/i18n/de/editor.json
+++ b/src/main/webapp/i18n/de/editor.json
@@ -76,7 +76,8 @@
                 "couldNotBeRetrieved": "Der Repository Status konnte nicht überprüft werden.",
                 "problemStatementCouldNotBeUpdated": "Die Aufgabenstellung der Übung konnte nicht aktualisiert werden.",
                 "failedToLoadBuildLogs": "Die Build Logs konnten nicht geladen werden.",
-                "repositoryInConflict": "Dein Repository befindet sich in einem Konfliktzustand."
+                "repositoryInConflict": "Dein Repository befindet sich in einem Konfliktzustand.",
+                "undefined": "Deine Änderungen wurden nur lokal gespeichert! Überprüfe sie noch einmal, wenn du wieder online bist."
             },
             "testStatusLabels": {
                 "noResult": "Keine Ergebnisse",
