--- a/src/main/webapp/i18n/en/exam.json
+++ b/src/main/webapp/i18n/en/exam.json
@@ -35,6 +35,9 @@
             "timer": "Time Left: ",
             "connected": "Connected. Your answers will be saved every 60s.",
             "disconnected": "You are disconnected. Please check your Internet connection. You can continue working, but you need to be connected in order to save changes!",
+            "disconnectedCodeEditorAndOfflineIDE": "You are disconnected. Please check your Internet connection. You can still work offline by cloning the repository.",
+            "disconnectedCodeEditorNoOfflineIDE": "You are disconnected. Please reconnect in order to continue working in the code editor.",
+            "disconnectedNoCodeEditor": "You are disconnected. Please check your Internet connection.",
             "waitForStart": "Please wait until the exam \"{{ title }}\" begins.",
             "timeUntilPlannedStart": "Time until planned start:",
             "finishExam": "Finish exam",
