adjust summary exercise card for programming ex

--- a/src/main/webapp/i18n/de/exam.json
+++ b/src/main/webapp/i18n/de/exam.json
@@ -8,7 +8,8 @@
             },
             "examSummary": {
                 "summaryCapital": "ZUSAMMENFASSUNG",
-                "exportPDF": "Als PDF exportieren"
+                "exportPDF": "Als PDF exportieren",
+                "repositoryLink": "Repository Link"
             },
             "title": "Klausur",
             "startExam": "Klausur starten",
