--- a/src/main/webapp/i18n/en/exam.json
+++ b/src/main/webapp/i18n/en/exam.json
@@ -8,7 +8,8 @@
             },
             "examSummary": {
                 "summaryCapital": "SUMMARY",
-                "exportPDF": "Export PDF"
+                "exportPDF": "Export PDF",
+                "repositoryLink": "Repository Link"
             },
             "title": "Exam",
             "startExam": "Start Exam",
