--- a/src/main/webapp/i18n/de/exam.json
+++ b/src/main/webapp/i18n/de/exam.json
@@ -8,8 +8,7 @@
             },
             "examSummary": {
                 "summaryCapital": "ZUSAMMENFASSUNG",
-                "exportPDF": "Als PDF exportieren",
-                "repositoryLink": "Repository Link"
+                "exportPDF": "Als PDF exportieren"
             },
             "title": "Klausur",
             "startExam": "Klausur starten",
