--- a/src/main/webapp/i18n/en/exam.json
+++ b/src/main/webapp/i18n/en/exam.json
@@ -8,8 +8,7 @@
             },
             "examSummary": {
                 "summaryCapital": "SUMMARY",
-                "exportPDF": "Export PDF",
-                "repositoryLink": "Repository Link"
+                "exportPDF": "Export PDF"
             },
             "title": "Exam",
             "startExam": "Start Exam",
