--- a/src/main/webapp/i18n/en/exam.json
+++ b/src/main/webapp/i18n/en/exam.json
@@ -34,6 +34,7 @@
         "examParticipation": {
             "timer": "Time Left: ",
             "connected": "Connected. Your answers will be saved every 60s.",
+            "ideConnected": "Connected.",
             "disconnected": "You are disconnected. Please check your Internet connection. You can continue working, but you need to be connected in order to save changes!",
             "disconnectedCodeEditorAndOfflineIDE": "You are disconnected. Please check your Internet connection. You can still work offline by cloning the repository.",
             "disconnectedCodeEditorNoOfflineIDE": "You are disconnected. Please reconnect in order to continue working in the code editor.",
