--- a/src/main/webapp/i18n/en/exam.json
+++ b/src/main/webapp/i18n/en/exam.json
@@ -55,6 +55,7 @@
             "title": "Student exams",
             "generateStudentExams": "Generate individual exams",
             "startExercises": "Prepare exercise start",
+            "evaluateExercises": "Evaluate exercises",
             "searchForStudents": "Search for students by login or name (comma separated)",
             "student": "Student",
             "workingTime": "Working time",
@@ -67,7 +68,9 @@
             "studentExamGenerationSuccess": "{{number}} student exams successfully generated!",
             "studentExamGenerationError": "There was an error during student exam generation:\n {{message}}",
             "startExerciseSuccess": "{{number}} exercises successfully prepared!",
-            "startExerciseFailure": "There was an error during the preparation of the exercises:\n {{message}}"
+            "startExerciseFailure": "There was an error during the preparation of the exercises:\n {{message}}",
+            "evaluateExerciseSuccess": "{{number}} exercises successfully evaluated!",
+            "evaluateExerciseFailure": "There was an error during the evaluation of the exercises:\n {{message}}"
         },
         "examManagement": {
             "title": "Exam Management",
