Rename to evaluateQuiz, disable action buttons if not applicable.

--- a/src/main/webapp/i18n/en/exam.json
+++ b/src/main/webapp/i18n/en/exam.json
@@ -55,7 +55,7 @@
             "title": "Student exams",
             "generateStudentExams": "Generate individual exams",
             "startExercises": "Prepare exercise start",
-            "evaluateExercises": "Evaluate exercises",
+            "evaluateQuizExercises": "Evaluate quizzes",
             "searchForStudents": "Search for students by login or name (comma separated)",
             "student": "Student",
             "workingTime": "Working time",
@@ -69,8 +69,8 @@
             "studentExamGenerationError": "There was an error during student exam generation:\n {{message}}",
             "startExerciseSuccess": "{{number}} exercises successfully prepared!",
             "startExerciseFailure": "There was an error during the preparation of the exercises:\n {{message}}",
-            "evaluateExerciseSuccess": "{{number}} exercises successfully evaluated!",
-            "evaluateExerciseFailure": "There was an error during the evaluation of the exercises:\n {{message}}"
+            "evaluateQuizExerciseSuccess": "{{number}} quiz exercises successfully evaluated!",
+            "evaluateQuizExerciseFailure": "There was an error during the evaluation of the quiz exercises:\n {{message}}"
         },
         "examManagement": {
             "title": "Exam Management",
