small fixes for programming exercises in the navigation bar

--- a/src/main/webapp/i18n/en/exam.json
+++ b/src/main/webapp/i18n/en/exam.json
@@ -46,7 +46,7 @@
             "progressSmall": "{{ current }}/{{ all }}",
             "noExam": "Exam could not be loaded. Please contact your instructor.",
             "submitProgrammingExercise": "Continue",
-            "submitOtherExercise": "Submit & continue",
+            "submitOtherExercise": "Save & continue",
             "submitLastExercise": "Save",
             "greeting": "Hello {{ fullName }}, welcome to \"{{ title }}\""
         },
