--- a/src/main/webapp/i18n/en/exam.json
+++ b/src/main/webapp/i18n/en/exam.json
@@ -7,7 +7,7 @@
                 "maxPoints": "max. Points: {{points}}"
             },
             "examSummary": {
-                "summaryCapital": "SUMMARY",
+                "yourSubmissionTo": "Your submission to {{examTitle}} ({{studentName}})",
                 "exportPDF": "Export PDF"
             },
             "title": "Exam",
