Implement client side of update working time

--- a/src/main/webapp/i18n/de/exam.json
+++ b/src/main/webapp/i18n/de/exam.json
@@ -169,7 +169,8 @@
             "reviewer": "Reviewer",
             "openSubmission": "Einreichung öffnen",
             "openAssessment": " Bewertung öffnen",
-            "cancelAssessment": " Bewertung abbrechen"
+            "cancelAssessment": " Bewertung abbrechen",
+            "workingTimeCouldNotBeSaved": "Die Bearbeitungszeit konnte nicht gespeichert werden"
         }
     }
 }
