--- a/src/main/webapp/i18n/en/exam.json
+++ b/src/main/webapp/i18n/en/exam.json
@@ -169,7 +169,8 @@
             "reviewer": "Reviewer",
             "openSubmission": "Open Submission",
             "openAssessment": " Open Assessment",
-            "cancelAssessment": " Cancel Assessment"
+            "cancelAssessment": " Cancel Assessment",
+            "workingTimeCouldNotBeSaved": "The working time could not be saved"
         }
     }
 }
