--- a/src/main/webapp/i18n/de/editor.json
+++ b/src/main/webapp/i18n/de/editor.json
@@ -37,12 +37,19 @@
             "downloadBuildResult": "Build Ergebnis herunterladen",
             "saving": "Speichert",
             "saveFiles": "Speichern",
+            "refreshing": "Aktualisiert",
             "loadingFile": "Lade ausgewählte Datei",
             "loadingFiles": "Lade Dateien",
             "fileLoadedSuccess": "Datei erfolgreich geladen",
             "fetchingParticipation": "Deine Teilnahme wird geladen, bitte warte einen Moment...",
             "conflict": {
                 "resolveConflict": "Konflikt bereinigen"
+            },
+            "refresh": {
+                "performRefresh": "Aktualisieren",
+                "refreshExplanationShort": "Aktualisiere alle Dateien aus deinem Repository.",
+                "refreshExplanationLong": "Du hast noch nicht gespeicherte oder hochgeladene Änderungen im Online Editor. Wenn du 'Aktualisieren' drückst werden alle Änderungen verworfen und mit dem letzten Commit vom Server überschrieben.",
+                "refreshWarning": "Es werden alle ungespeicherten Änderungen im Online Editor gelöscht!"
             },
             "fileBrowser": {
                 "fileBrowser": "Datei Browser",
