--- a/src/main/webapp/i18n/en/editor.json
+++ b/src/main/webapp/i18n/en/editor.json
@@ -28,6 +28,8 @@
             "submittingChangesTooltip": "Submitting changes.",
             "preparingForSubmit": "Preparing...",
             "preparingForSubmitTooltip": "Preparing for submit.",
+            "refreshingFiles": "Refreshing...",
+            "refreshingFilesTooltip": "Refreshing all files in the editor.",
             "submit": "Submit",
             "buildOutput": "&nbsp; Build Output",
             "building": "Building and testing...",
