Add success message

--- a/src/main/webapp/i18n/de/exam.json
+++ b/src/main/webapp/i18n/de/exam.json
@@ -170,7 +170,8 @@
             "openSubmission": "Einreichung öffnen",
             "openAssessment": " Bewertung öffnen",
             "cancelAssessment": " Bewertung abbrechen",
-            "workingTimeCouldNotBeSaved": "Die Bearbeitungszeit konnte nicht gespeichert werden"
+            "workingTimeCouldNotBeSaved": "Die Bearbeitungszeit konnte nicht gespeichert werden.",
+            "saveWorkingTimeSuccessful": "Die Bearbeitungszeit wurde erfolgreich gespeichert."
         }
     }
 }
