--- a/src/main/webapp/i18n/en/exam.json
+++ b/src/main/webapp/i18n/en/exam.json
@@ -170,7 +170,8 @@
             "openSubmission": "Open Submission",
             "openAssessment": " Open Assessment",
             "cancelAssessment": " Cancel Assessment",
-            "workingTimeCouldNotBeSaved": "The working time could not be saved"
+            "workingTimeCouldNotBeSaved": "The working time could not be saved.",
+            "saveWorkingTimeSuccessful": "The working time was saved successfully."
         }
     }
 }
